# MarketAgent

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/cli/: __init__.py  main.py
frontend/common/: __init__.py  client.py
frontend/web/: __init__.py  company_page.py  person_page.py  server.py  shared_page.py
market_agent/: __init__.py  agent.py  config.py  models.py  utils.py
market_agent/analysis/: __init__.py
market_agent/analysis/company/: __init__.py
market_agent/analysis/person/: __init__.py
market_agent/analysis/stock/: __init__.py  interfaces.py  prompt.py  schema.py  single_stock.py
market_agent/api/: __init__.py  indicators.py
market_agent/cli/: app.py
market_agent/datamodel/: company.py  indicators.py  person.py
market_agent/datasources/: __init__.py  finnhub_client.py
market_agent/datasources/finnhub/: __init__.py  finnhub_client.py  finnhub_indicator_fetcher.py
market_agent/llms/: __init__.py  registry.py
market_agent/llms/openai/: __init__.py
postgres/: docker-compose.yml  init.sql  init_db.sh
tests/: test_smoke.py
