[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MarketAgent"
version = "0.1.0"
description = "A lightweight CLI/SDK to fetch stock & company info (Finnhub-powered)."
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "finnhub-python>=2.4.19",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "typer>=0.12.3",
    "fastapi>=0.111.0"
]

[project.scripts]
marketagent = "market_agent.cli.app:app"
